--- a/src/Ingredients/Ingredients.csproj
+++ b/src/Ingredients/Ingredients.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Protobuf Include="Protos\ingredients.proto" GrpcServices="Server" />
+    <Protobuf Include="Protos\ingredients.proto" GrpcServices="Server" ProtoRoot="Protos" />
+    <Protobuf Include="Protos/decimal.proto" GrpcServices="None" />
   </ItemGroup>
 
   <ItemGroup>
