--- a/src/Orders/Orders.csproj
+++ b/src/Orders/Orders.csproj
@@ -16,6 +16,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Orders.PubSub\Orders.PubSub.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Protobuf Include="Protos/orders.proto" GrpcServices="Server" />
     <Protobuf Include="Protos\ingredients.proto" GrpcServices="Client">
     </Protobuf>
